# x-creative

./: .env.example  .gitignore  LICENSE.md  README.en.md  README.md  pyproject.toml
docs/: theory.en.md  theory.md
docs/plans/: 2026-02-27-biso-llm-pool-design.md  2026-02-27-biso-llm-pool-implementation.md  2026-02-28-biso-dedup-design.md  2026-02-28-biso-dedup-implementation.md
examples/: basic_usage.py  custom_domain.py  explore_domains.py
ruamel/: __init__.py  yaml.py
tests/: __init__.py
tests/integration/: __init__.py  test_cli_workflow.py  test_full_pipeline.py
tests/unit/: __init__.py  test_answer_constraint_preflight.py  test_answer_engine.py  test_answer_integration.py  test_answer_pack_builder.py  test_answer_problem_frame.py  test_answer_source_selector.py  test_answer_target_resolver.py  test_answer_types.py  test_bd_extractor.py  test_biso_mapping.py  test_blend_expand.py  test_blend_types.py  test_build_top_hypotheses.py  test_ck_coordinator.py  test_cli.py  test_cli_answer.py  test_cli_concept_space.py  test_cli_hkg.py  test_cli_run.py  test_cli_session.py  test_cli_show.py  test_concept_space_compiler.py  test_concept_space_types.py  test_config.py  test_config_check.py  test_constraint_checker.py  test_core_types.py  test_creativity.py  test_domain_generator.py  test_domain_manager_app.py  test_domain_refactor.py  test_domain_search.py  test_engine.py  test_event_payload_top_hypotheses.py  test_hkg_expand.py  test_hkg_feature_flag.py  test_hkg_ingest.py  test_hkg_integration_types.py  test_hkg_matcher.py  (+43 more)
x_creative/: __init__.py
x_creative/answer/: __init__.py  constraint_preflight.py  engine.py  pack_builder.py  problem_frame.py  prompts.py  source_selector.py  target_resolver.py  types.py
x_creative/cli/: __init__.py  answer.py  concept_space_cli.py  hkg.py  main.py  progress.py  run.py  session.py  show.py  split_screen.py
x_creative/config/: __init__.py  checker.py  settings.py
x_creative/core/: __init__.py  blend_types.py  concept_space.py  concept_space_compiler.py  domain_loader.py  plugin.py  transform_types.py  types.py
x_creative/creativity/: __init__.py  bd_extractor.py  biso.py  (+10 more)
(+75 files in other folders)
