[project]
name = "x-creative"
version = "0.1.0"
description = "A creativity-driven financial quantitative research agent workflow system"
authors = [
    {name = "xuenliang2019", email = "56944734+xuenliang2019@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    # LLM & Agent Framework
    "langgraph>=1.0.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",  # OpenRouter uses OpenAI-compatible API
    "httpx>=0.27.0",

    # Data Validation & Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.0",

    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.9.0",

    # Async Support
    "anyio>=4.6.0",

    # Utilities
    "tenacity>=9.0.0",  # Retry logic
    "structlog>=24.4.0",  # Structured logging

    # TUI & YAML
    "textual>=0.50.0",
    "ruamel.yaml>=0.18.0",
    "pytest (>=9.0.2,<10.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

knowledge = [
    # For future Knowledge & Memory Engine
    "chromadb>=0.5.0",
    "neo4j>=5.24.0",
]

financial = [
    # For future Financial Data Engine
    "tushare>=1.4.0",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
]

[project.scripts]
x-creative = "x_creative.cli.main:app"
xc-domain = "x_creative.domain_manager.cli:main"
xc-target = "x_creative.target_manager.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
